alteraçoes na pagina

--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-1-html-css-estruturas-de-pagina/exercício-1.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-1-html-css-estruturas-de-pagina/exercício-1.html
@@ -7,6 +7,15 @@
     <body>
         <h1>Lista de novos amigos trybe</h1>
         <h2>Amigos:</h2>
-        <p>Eles são muito importantes na nossa vida.<br Com muito</p>
+        <p>Eles são muito importantes na nossa vida. <br><strong>Devemos ter muito esforço.</strong>
+        <em>Tornar-me-ei um ótimo progamador.</em></p>
+        <ul>
+            <li>CSS</li>
+            <li>Posicionamento semântico em CSS</li>
+            <li>HTML Semântico</li>
+            <li>JavaScript</li>
+            <li>DOM</li>
+            <li>FlexBox</li>
+        </ul>
     </body>
 </html>
