--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-1-html-css-estruturas-de-pagina/exercício-1.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-1-html-css-estruturas-de-pagina/exercício-1.html
@@ -17,5 +17,7 @@
             <li>DOM</li>
             <li>FlexBox</li>
         </ul>
+        <img src="https://www.significados.com.br/foto/flor-de-lotus_dt.jpg" width="150px" alt="Flor de Lótus">
+        <h3>Flor de Lótus</h3>
     </body>
 </html>
