--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-1-html-css-estruturas-de-pagina/exercício-1.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-1-html-css-estruturas-de-pagina/exercício-1.html
@@ -10,14 +10,37 @@
         <p>Eles são muito importantes na nossa vida. <br><strong>Devemos ter muito esforço.</strong>
         <em>Tornar-me-ei um ótimo progamador.</em></p>
         <ul>
-            <li>CSS</li>
+            <li><a href="#css">CSS</a></li>
             <li>Posicionamento semântico em CSS</li>
             <li>HTML Semântico</li>
             <li>JavaScript</li>
             <li>DOM</li>
-            <li>FlexBox</li>
+            <li><a href="#flexbox">flexbox</a></li>
         </ul>
+        <a href="https://www.tudogostoso.com.br/receita/199300-flan-de-baunilha-com-calda.html" target="_blank">Receita</a>
         <img src="https://www.significados.com.br/foto/flor-de-lotus_dt.jpg" width="150px" alt="Flor de Lótus">
         <h3>Flor de Lótus</h3>
+
+        <p id="css"><h2>O que é CSS?</h2>
+            CSS é chamado de linguagem Cascading Style Sheet e é usado para estilizar elementos escritos em uma linguagem de marcação como HTML. O CSS separa o conteúdo da representação visual do site. Pense  na decoração da sua página. Utilizando o CSS é possível alterar a cor do texto e do fundo, fonte e espaçamento entre parágrafos. Também pode criar tabelas, usar variações de layouts, ajustar imagens para suas respectivas telas e assim por diante.
+            CSS foi desenvolvido pelo W3C (World Wide Web Consortium) em 1996, por uma razão bem simples. O HTML não foi projetado para ter tags que ajudariam a formatar a página. Você deveria apenas escrever a marcação para o site.
+            Tags como foram introduzidas na versão 3.2 do HTML e causaram muitos problemas para os desenvolvedores. Como os sites tinham diferentes fontes, cores e estilos, era um processo longo, doloroso e caro para reescrever o código. Assim, o CSS foi criado pelo W3C para resolver este problema.
+            A relação entre HTML e CSS é bem forte. Como o HTML é uma linguagem de marcação (o alicerce de um site) e o CSS é focado no estilo (toda a estética de um site), eles andam juntos.
+            CSS não é tecnicamente uma necessidade, mas provavelmente você não gostaria de olhar para um site que usa apenas HTML, pois isso pareceria completamente abandonado.</p>
+        <p><h2>CSS Funciona</h2>
+            O CSS é uma ferramenta muito potente que possibilita criar diversas funcionalidades ao invés de usar JavaScript ou outra linguagem mais pesada. Se usado com moderação, CSS pode viabilizar uma ótima experiência ao desenvolvedor e usuários das páginas web.
+            Com o Cascading Style Sheets é possível criar animações complexas, criar efeitos com uso de parallax, que faz parecer que a imagem de fundo tem uma profundidade diferente um dos outros, criar sites interativos e também jogos com HTML5 e CSS3.</p>
+        <p><h2>o que é significa semântico?</h2>
+            Semântica é o estudo do significado e interpretação de palavras. Aplicando isso ao HTML, significa a melhor compreensão do HTML para o computador.
+            Antes do HTML5, utilizava-se somente divs para dividir conteúdos e classes para estilizar, sem contar com a compreensão do próprio computador para “entender” o HTML.
+            Isso dificultava que suas respostas fossem passadas para buscas e leitores acessibilidade.</p>
+        <p><h2>JavaScript</h2> Sua popularidade é decorrente do fato de ela ser uma linguagem extremamente flexível e multifacetada, fazendo com que milhares de pessoas desenvolvedoras se interessassem por ela, inclusive para escrever os primeiro códigos.
+            “Então, é fácil de aprender?” Como toda nova habilidade técnica, é necessário estudo para conseguir dominá-la! Entretanto, com a dedicação certa, você não deverá ter problemas em aprendê-la. Por isso, preparamos esse guia, do básico ao avançado, para entender e dominar a tecnologia!</p>
+        <p><h2>DOM</h2>O Modelo de Objeto de Documento  (DOM) é uma interface de programação para documentos HTML, XML e SVG . Ele fornece uma representação estruturada do documento como uma árvore. O DOM define métodos que permitem acesso à árvore, para que eles possam alterar a estrutura, estilo e conteúdo do documento. O DOM fornece uma representação do documento como um grupo estruturado de nós e objetos, possuindo várias propriedades e métodos. Os nós também podem ter manipuladores de eventos que lhe são inerentes, e uma vez que um evento é acionado, os manipuladores de eventos são executados. Essencialmente, ele conecta páginas web a scripts ou linguagens de programação.
+            Embora o DOM seja frequentemente acessado usando JavaScript, não é uma parte da linguagem JavaScript. Ele também pode ser acessado por outras linguagens.</p>
+        <p id="flexbox"><h2>O que é o Flexbox</h2>
+            Por muito tempo, as únicas ferramentas disponíveis para criar leiautes em CSS e posicionar elementos com boa compatibilidade entre browsers eram float e position. Porém, essas ferramentas possuem algumas limitações muito frustrantes, especialmente no que diz respeito à responsividade. Algumas tarefas que consideramos básicas em um leiaute, como centralização vertical de um elemento-filho com relação a um elemento-pai ou fazer com que elementos-filhos ocupem a mesma quantidade de espaço, ou colunas terem o mesmo tamanho independente da quantidade de conteúdo interno, eram impossíveis ou muito difíceis de serem manejadas com floats ou position, ao menos de forma prática e flexível.
+            A ferramenta Flexbox (de Flexible Box) foi criada para tornar essas tarefas mais simples e funcionais: os filhos de um elemento com Flexbox podem se posicionar em qualquer direção e pode ter dimensões flexíveis para se adaptar.</p>
+
     </body>
 </html>
