--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -3,13 +3,38 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
-    <style></style>
+    <style>
+
+
+      h1 {
+          color:orange; 
+          font-size: 65px;
+      }
+
+      ul {
+        background-color: blue;
+      }
+
+      li {
+        background-color: red;
+      }
+
+      #yellow-color {
+        color: yellow;
+      }
+
+      .list-style {
+        background-color: violet;
+      }
+
+
+    </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
-    <p>Qual é a sua cor favorita?</p>
-    <ul>
-      <li>Amarelo</li>
+    <p class="list-style" >Qual é a sua cor favorita?</p>
+    <ul class="list-style">
+      <li id="yellow-color" >Amarelo</li>
       <li>Vermelho</li>
       <li>Marrom</li>
     </ul>
