--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index_1.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index_1.html
@@ -19,24 +19,35 @@
         font-style: oblique;
       }
 
-      ul {
+      .free-style {
         line-height: 2;
         text-align: center;
-        text-decoration: ;
+        text-decoration: white;
+        font-size: 20px;
+        font-family: cursive;
       }
 
-    
+      #line-yellow {
+        background-color: yellow;
+      }
 
+      #line-red {
+        background-color: red;
+      }
+
+      #line-brown {
+        background-color: brown;
+      }
 
     </style>
   </head>
   <body>
     <h1>Exercícios 3.2</h1>
     <p>Qual é a sua cor favorita?</p>
-    <ul>
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+    <ul class="free-style">
+      <li id="line-yellow">Amarelo</li>
+      <li id="line-red">Vermelho</li>
+      <li id="line-brown">Marrom</li>
     </ul>
   </body>
 </html>
