--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index_1.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index_1.html
@@ -20,11 +20,13 @@
       }
 
       .free-style {
+        font-family: Georgia, 'Times New Roman', Times;
+        font-weight: bold;
         line-height: 2;
         text-align: center;
-        text-decoration: white;
-        font-size: 20px;
-        font-family: cursive;
+        text-decoration: underline;
+        font-size: 1.5em;
+        color: blue;
       }
 
       #line-yellow {
