--- a/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index_1.html
+++ b/fundamentos/bloco-3-introdução-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index_1.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>HTML</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
 
-      h1 {
+      /*h1 {
         font-family: sans-serif;
       }
 
@@ -20,7 +21,7 @@
       }
 
       .free-style {
-        font-family: Georgia, 'Times New Roman', Times;
+        font-family: sans-serif;
         font-weight: bold;
         line-height: 2;
         text-align: center;
@@ -39,7 +40,7 @@
 
       #line-brown {
         background-color: brown;
-      }
+      }*/
 
     </style>
   </head>
